--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "debug": "nodemon --inspect-brk ./bin/www"
+    "start": "nodemon ./bin/www",
+    "debug": "nodemon --inspect-brk ./bin/www",
+    "debug1": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.2.7",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-auto": "^0.4.29",
+    "sequelize-cli": "^5.4.0",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
