--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "debug": "nodemon --inspect-brk ./bin/www",
+    "debug": "nodemon --inspect-brk ./bin/www port:3000",
     "debug1": "nodemon ./bin/www"
   },
   "dependencies": {
