--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
     "debug": "nodemon --inspect-brk ./bin/www port:3000",
     "debug1": "nodemon ./bin/www"
   },
